fixed jobs available not showing on search page for non-mobile

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -96,7 +96,7 @@
     @include bp('portrait')
       text-align: left
       position: relative
-      top: 4rem
+      top: -4rem
 
   &__view-controls
     display: flex
